# cde_labs

./: CMakeLists.txt  README.md
src/: build.h.in  common.cpp  common.h  common_display.cpp  common_display.h
src/common/: common.cpp  common.h  sdl_display.h  sdl_text.h
src/lab1/: main.cpp  methods.cpp  methods.h
src/lab2/: display.cpp  display.h  main.cpp  mesh.h
src/lab3/: display.cpp  display.h  flatmat.h  main.cpp  model.cpp  model.h  model_types.h  parser.cpp  parser.h  parser_types.h
src/lab4/: main.cpp
